Fixed alignment of legend

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 h1 {
     text-align: center;
+    margin-bottom: 5%;
+}
+
+h3 {
+    text-align: left;
+    margin-bottom: 2%;
 }
 
 body {
@@ -15,9 +21,12 @@ div {
 }
 
 #legend {
-    display: grid;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 5%;
+    justify-content: space-between;
 }
 
 #titanic {
-    display: grid;
+    align-items: center;
 }
